2007-01-04  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (escape_device_name_for_menu),
	(add_device_to_menu): Escape the disc name before adding it
	to the menu, so we don't have mnemonics when we don't mean
	to (Closes: #391206)

2007-01-04  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-volume.c: (bacon_volume_button_init),
	(bacon_volume_button_update_tip),
	(bacon_volume_scale_value_changed):
	* src/bacon-volume.h: Update from libbacon, adds a tooltip
	to the volume button

2007-01-03  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: Patch from Philip Withnall
	<bugzilla@tecnocode.co.uk> to allow the keyboard to work
	on the Image settings sliders (Closes: #364644)
	* src/totem-preferences.h: added G_BEGIN_DECLS

2007-01-03  Bastien Nocera  <hadess@hadess.net>

	* data/properties.glade: Patch from Denis Washington
	<dwashington@gmx.net> to italicise the labels before the
	actual metadata (Closes: #383024)

2007-01-02  Christian Persch  <chpe@svn.gnome.org>

	* browser-plugin/totemPlugin.cpp:
	Check if the handler is the external protocol handler. Bug #391519.

2006-12-19  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/tests/.htaccess:
	* browser-plugin/tests/totem-href.mov: make test 2 work

2006-12-18  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser.c: (parse_xspf_track): Don't crash
	if there's no URL found in the XSPF track entry (Closes: #386089)

2006-12-18  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/tests/index.html: print the plugin list
	* browser-plugin/tests/launch-web-server.sh: add some code to log
	the user-agent used
	* browser-plugin/totemNarrowSpacePlugin.cpp: use QuickTime's real
	plug-in name, to avoid detection problems

2006-12-18  Irene Huang  <irene.huang@sun.com>

	* src/bacon-volume.c: (cb_dock_key_release): remove grab of
	the dock button after escape key is released. Fixes bug 385391.

2006-12-16  Tim-Philipp Müller  <tim at centricular dot net>
